.kubernetes/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yosoyapp
  namespace: apps
  labels:
    app: yosoyapp

spec:
  replicas: 1
  selector:
    matchLabels:
      app: yosoyapp
  template:
    metadata:
      labels:
        app: yosoyapp
    spec:
      containers:
        - name: yosoyapp
          image: us-central1-docker.pkg.dev/authenticfarma-425820/ingenios-artifact-registry/yosoyapp:latest
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 512Mi
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "php artisan migrate --force && php artisan passport:install"]
