.kubernetes/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yosoyapp
  namespace: apps
  labels:
    app: yosoyapp

spec:
  replicas: 1
  selector:
    matchLabels:
      app: yosoyapp
  template:
    metadata:
      labels:
        app: yosoyapp
    spec:
      containers:
        - name: yosoyapp
          image: us-central1-docker.pkg.dev/authentic-prod-464216/authenticfarma-microservices-test/yo-soy:v2
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 300
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 300
            periodSeconds: 30
          # lifecycle:
          #   postStart:
          #     exec:
          #       command: ["/bin/sh", "-c", "php artisan passport:install"]
        
        # Cloud SQL Proxy sidecar
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.33.2
          command:
            - "/cloud_sql_proxy"
            - "-instances=authentic-prod-464216:us-central1:multiplataforma=tcp:3306"
            - "-credential_file=/secrets/cloudsql/credentials.json"
          securityContext:
            runAsNonRoot: true
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
