.kubernetes/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yosoyapp
  namespace: default

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: yosoyapp
