.kubernetes/05-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yosoyapp-clusterip
  namespace: apps
  labels:
    app: yosoyapp

spec:
  ports:
    - protocol: TCP
      name: web  
      port: 80
      targetPort: 80
  selector:
    app: yosoyapp
  type: ClusterIP
