.kubernetes/03-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-yosoyapp
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`app.yo-soy.co`)
    kind: Rule
    services:
    - name: yosoyapp
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-yosoyapp-secure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`app.yo-soy.co`)
    kind: Rule
    services:
    - name: yosoyapp
      port: 80
  tls:
    certResolver: default
