.kubernetes/05-dbadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: yosoydbadmin
  namespace: apps

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: yosoydbadmin

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yosoydbadmin
  namespace: apps
  labels:
    app: yosoydbadmin

spec:
  replicas: 1
  selector:
    matchLabels:
      app: yosoydbadmin
  template:
    metadata:
      labels:
        app: yosoydbadmin
    spec:
      containers:
        - name: yosoydbadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "200m"

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-yosoydbadmin
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dbadmin.yo-soy.co`)
      kind: Rule
      services:
        - name: yosoydbadmin
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-yosoydbadmin-secure
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dbadmin.yo-soy.co`)
      kind: Rule
      services:
        - name: yosoydbadmin
          port: 80
  tls:
    certResolver: letsencrypt
